--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
-<script>
-    /* Author: AdGlare Ad Server (https://www.adglare.com) */
-    function hasAdblock() {
-        var a = document.createElement('div');
-        a.innerHTML = '&nbsp;';
-        a.className = 'ads ad adsbox doubleclick ad-placement carbon-ads adglare';
-        a.style = 'width: 1px !important; height: 1px !important; position: absolute !important; left: -5000px !important; top: -5000px !important;';
-        var r = false;
-        try {
-            document.body.appendChild(a);
-            var e = document.getElementsByClassName('adsbox')[0];
-            if(e.offsetHeight === 0 || e.clientHeight === 0) r = true;
-            if(window.getComputedStyle !== undefined) {
-                var tmp = window.getComputedStyle(e, null);
-                if(tmp && (tmp.getPropertyValue('display') == 'none' || tmp.getPropertyValue('visibility') == 'hidden')) r = true;
-            }
-            document.body.removeChild(a);
-        } catch (e) {}
-        return r;
-    }
-    alert('Has AdBlock: ' + hasAdblock());
-</script>
+<script src="./adblockDetector.js"></script>
+	<script>
+	// Configure the adblock detector
+	(function(){
+		var enabledEl = document.getElementById('adb-enabled');
+		var disabledEl = document.getElementById('adb-not-enabled');
+		function adBlockDetected() {
+			enabledEl.style.display = 'block';
+			disabledEl.style.display = 'none';
+		}
+		function adBlockNotDetected() {
+			disabledEl.style.display = 'block';
+			enabledEl.style.display = 'none';
+		}
+		
+		if(typeof window.adblockDetector === 'undefined') {
+			adBlockDetected();
+		} else {
+			window.adblockDetector.init(
+				{
+					debug: true,
+					found: function(){
+						adBlockDetected();
+					},
+					notFound: function(){
+						adBlockNotDetected();
+					}
+				}
+			);
+		}
+	}());
+	</script>
+<body>
+    <div class="center">
+    <h5 class="bg-success" id="adb-not-enabled" style="display: none;">AdBlock is disabled</h5>
+    <h5 class="bg-danger" id="adb-enabled" style="display: none;">AdBlock is enabled</h5>
+    </div>
+</body>
 <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
