--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Earth Clicker: Idle Clicker</title>
+<link rel="icon" type="image/png" sizes="32x32" href="logo.png">
 <style>
     body{
         margin: 0; /* Remove default margin */
