--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
 <head>
 <title>Earth Clicker: Idle Clicker</title>
+<meta name="description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now!">
 <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
+<meta property="og:title" content="Earth Clicker: Idle Clicker">
+<meta property="og:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now!">
+<meta property="og:image" content="https://earthclicke.rme/logo.png">
+<meta property="og:url" content="https://earthclicker.me">
+<meta name="twitter:title" content="Earth Clicker: Idle Clicker">
+<meta name="twitter:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now!">
+<meta name="twitter:url" content="https://earthclicker.me/logo.png">
+<meta name="twitter:card" content="summary">
 <style>
     body{
         margin: 0; /* Remove default margin */
