--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <meta name="twitter:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now!">
 <meta name="twitter:url" content="https://earthclicker.me/logo.png">
 <meta name="twitter:card" content="summary">
+<!-- BEGIN SHAREAHOLIC CODE -->
+<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script" />
+<meta name="shareaholic:site_id" content="83b14f96ddb95654ee25ef04d9ed58ad" />
+<script data-cfasync="false" async src="https://cdn.shareaholic.net/assets/pub/shareaholic.js"></script>
+<!-- END SHAREAHOLIC CODE -->
 <style>
     body{
         margin: 0; /* Remove default margin */
