--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     }
 </style>
 </head>
-<body>
+    <body>
+    <h1>Earth Clicker: Idle Clicker</h1>
     <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
 </body>
 </html>
