--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     body{
         margin: 0; /* Remove default margin */
     }
+    .game-container {
+        position: relative;
+    }
     iframe{      
         display: block;  /* iframes are inline by default */   
         height: 100vh;  /* Set height to 100% of the viewport height */   
@@ -31,7 +34,8 @@
 </style>
 </head>
     <body>
-    <h1>Earth Clicker: Idle Clicker</h1>
+    <div class="game-container">
+        <h1>Earth Clicker: Idle Clicker</h1>
     <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
 </body>
 </html>
