--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     .game-container {
         position: relative;
     }
-    iframe{      
+    iframe{
+        position: absolute;
         display: block;  /* iframes are inline by default */   
         height: 100vh;  /* Set height to 100% of the viewport height */   
         width: 100vw;  /* Set width to 100% of the viewport width */     
