--- a/index.html
+++ b/index.html
@@ -1,42 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Earth Clicker: Idle Clicker</title>
-<meta name="description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now!">
-<link rel="icon" type="image/png" sizes="32x32" href="logo.png">
-<meta property="og:title" content="Earth Clicker: Idle Clicker">
-<meta property="og:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now!">
-<meta property="og:image" content="https://earthclicke.rme/logo.png">
-<meta property="og:url" content="https://earthclicker.me">
-<meta name="twitter:title" content="Earth Clicker: Idle Clicker">
-<meta name="twitter:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now!">
-<meta name="twitter:url" content="https://earthclicker.me/logo.png">
-<meta name="twitter:card" content="summary">
-<!-- BEGIN SHAREAHOLIC CODE -->
-<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script" />
-<meta name="shareaholic:site_id" content="83b14f96ddb95654ee25ef04d9ed58ad" />
-<script data-cfasync="false" async src="https://cdn.shareaholic.net/assets/pub/shareaholic.js"></script>
-<!-- END SHAREAHOLIC CODE -->
-<style>
-    body{
-        margin: 0; /* Remove default margin */
-    }
-    .game-container {
-        position: relative;
-    }
-    iframe{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border: none; /* Remove iframe border */
-    }
-</style>
+    <title>Earth Clicker: Idle Clicker</title>
+    <meta name="description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now.">
+    <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
+    <meta property="og:title" content="Earth Clicker: Idle Clicker">
+    <meta property="og:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now.">
+    <meta property="og:image" content="https://earthclicker.me/logo.png">
+    <meta property="og:url" content="https://earthclicker.me">
+    <meta name="twitter:title" content="Earth Clicker: Idle Clicker">
+    <meta name="twitter:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now.">
+    <meta name="twitter:url" content="https://earthclicker.me/logo.png">
+    <meta name="twitter:card" content="summary">
+    <!-- BEGIN SHAREAHOLIC CODE -->
+    <link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script" />
+    <meta name="shareaholic:site_id" content="83b14f96ddb95654ee25ef04d9ed58ad" />
+    <script data-cfasync="false" async src="https://cdn.shareaholic.net/assets/pub/shareaholic.js"></script>
+    <!-- END SHAREAHOLIC CODE -->
+    <style>
+        body{
+            margin: 0; /* Remove default margin */
+            overflow: hidden; /* Hide scrollbars */
+        }
+        iframe{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none; /* Remove iframe border */
+        }
+    </style>
 </head>
-    <body>
-    <div class="game-container">
-        <h1>Earth Clicker: Idle Clicker</h1>
-        <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
+<body>
+    <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
 </body>
 </html>
