--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     <script data-cfasync="false" async src="https://cdn.shareaholic.net/assets/pub/shareaholic.js"></script>
     <!-- END SHAREAHOLIC CODE -->
     <style>
-        body{
+        body {
             margin: 0; /* Remove default margin */
-            overflow: hidden; /* Hide scrollbars */
         }
-        iframe{
+        iframe {
             position: absolute;
             top: 0;
             left: 0;
@@ -30,9 +29,17 @@
             height: 100%;
             border: none; /* Remove iframe border */
         }
+        h1 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1; /* Place the H1 above the iframe */
+        }
     </style>
 </head>
 <body>
     <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
+    <h1>Earth Clicker: Idle Clicker</h1>
 </body>
 </html>
