--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <style>
         body {
             margin: 0; /* Remove default margin */
+            overflow: hidden; /* Hide the scrollbars */
+        }
+        .game-container {
+            position: relative;
         }
         iframe {
             position: absolute;
@@ -31,15 +35,14 @@
         }
         h1 {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 1; /* Place the H1 above the iframe */
+            top: 100%; /* Position it below the iframe */
         }
     </style>
 </head>
 <body>
-    <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
-    <h1>Earth Clicker: Idle Clicker</h1>
+    <div class="game-container">
+        <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
+        <h1>Earth Clicker: Idle Clicker</h1>
+    </div>
 </body>
 </html>
