--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
         h1 {
             position: absolute;
-            top: 100%; /* Position it below the iframe */
+            top: -9999px; /* Move it off the screen */
         }
     </style>
 </head>
