--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
     <meta property="og:title" content="Earth Clicker: Idle Clicker">
     <meta property="og:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now.">
-    <meta property="og:image" content="https://earthclicker.me/logo.png">
+    <meta property="og:image" content="https://earthclicke.rme/logo.png">
     <meta property="og:url" content="https://earthclicker.me">
     <meta name="twitter:title" content="Earth Clicker: Idle Clicker">
     <meta name="twitter:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now.">
@@ -20,9 +20,6 @@
     <style>
         body {
             margin: 0; /* Remove default margin */
-            overflow: hidden; /* Hide the scrollbars */
-        }
-        .game-container {
             position: relative;
         }
         iframe {
@@ -33,16 +30,16 @@
             height: 100%;
             border: none; /* Remove iframe border */
         }
-        h1 {
+        .game-title {
             position: absolute;
             top: -9999px; /* Move it off the screen */
         }
     </style>
 </head>
 <body>
-    <div class="game-container">
-        <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
+    <div class="game-title">
         <h1>Earth Clicker: Idle Clicker</h1>
     </div>
+    <iframe src="https://html5.gamemonetize.co/7m6h616gqacdj70c5kjh8271zgnplfdr/" scrolling="none" frameborder="0"></iframe>
 </body>
 </html>
