--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
     <title>Earth Clicker: Idle Clicker</title>
-    <meta name="description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now.">
+    <meta name="description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game.">
     <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
     <meta property="og:title" content="Earth Clicker: Idle Clicker">
-    <meta property="og:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now.">
+    <meta property="og:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game.">
     <meta property="og:image" content="https://earthclicke.rme/logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="https://earthclicker.me">
     <meta name="twitter:title" content="Earth Clicker: Idle Clicker">
-    <meta name="twitter:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game. Click to earn coins, upgrade your universe, and conquer epic quests. Join the cosmic adventure now.">
+    <meta name="twitter:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game.">
     <meta name="twitter:url" content="https://earthclicker.me/logo.png">
     <meta name="twitter:card" content="summary">
+    <div itemscope itemtype="http://schema.org/VideoGame">
+        <h1 itemprop="name">Earth Clicker: Idle Clicker</h1>
+        <p itemprop="description">Play Earth Clicker: Idle Clicker online - an exciting incremental game.</p>
     <!-- BEGIN SHAREAHOLIC CODE -->
     <link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script" />
     <meta name="shareaholic:site_id" content="83b14f96ddb95654ee25ef04d9ed58ad" />
