--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Earth Clicker: Idle Clicker</title>
+    <title>Play Earth Clicker: Idle Clicker Online</title>
     <meta name="description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game.">
+    <link rel="canonical" href="https://earthclicker.me/">
     <link rel="icon" type="image/png" sizes="32x32" href="logo.png">
-    <meta property="og:title" content="Earth Clicker: Idle Clicker">
+    <meta property="og:title" content="Play Earth Clicker: Idle Clicker Online">
     <meta property="og:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game.">
-    <meta property="og:image" content="https://earthclicke.rme/logo.png">
+    <meta property="og:image" content="https://earthclicker.me/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="https://earthclicker.me">
-    <meta name="twitter:title" content="Earth Clicker: Idle Clicker">
+    <meta name="twitter:title" content="Play Earth Clicker: Idle Clicker Online">
     <meta name="twitter:description" content="Play Earth Clicker: Idle Clicker online - an exciting incremental game.">
     <meta name="twitter:url" content="https://earthclicker.me/logo.png">
     <meta name="twitter:card" content="summary">
